--- a/employ-app-client/package.json
+++ b/employ-app-client/package.json
@@ -7,6 +7,7 @@
     "antd-mobile": "^2.2.14",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
+    "js-cookie": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
