--- a/employ-app-client/package.json
+++ b/employ-app-client/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.0.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
